[package]
name = "railcar"
version = "1.0.4"
authors = ["Vishvananda Ishaya Abrams <vish.ishaya@oracle.com>"]
build = "build.rs"

[dependencies]
caps = "0.5.0"
clap = "2.33.3"
error-chain = "0.12.4"
lazy_static = "1.4.0"
libc = "0.2.81"
log = { version = "0.4.11", features = ["release_max_level_info"] }
nix = "0.19.1"
num-traits = "0.2.14"
oci = { path = "oci" }
prctl = "1.0.0"
scopeguard = "1.1.0"
seccomp-sys = "0.1.3"

[features]
[profile.release]
lto = true
panic = 'abort'
